remove redundant opts